# AI_History

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/desktop/: package.json  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  models.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/http/: mod.rs
apps/desktop/src/components/: ConversationList.tsx  ConversationView.tsx  ExplorerSidebar.tsx  FolderTree.tsx  ImportDialog.tsx  MessageBubble.tsx  QANavigator.tsx  SearchBar.tsx  SettingsPanel.tsx
apps/desktop/src/hooks/: useData.ts
apps/desktop/src/lib/: api.ts  constants.ts  mock-db.ts  store.ts  tauri.ts  types.ts
apps/desktop/src/styles/: theme.css
apps/extension/: package.json  tsconfig.json  wxt.config.ts
apps/extension/entrypoints/: aistudio.content.ts  background.ts  chatgpt.content.ts  claude.content.ts  gemini.content.ts  popup.html
apps/extension/entrypoints/background/: attachment-fetch.ts  attachment-hints.ts  capture-runner.ts  capture-session.ts  constants.ts  content-script-lifecycle.ts  message-router.ts  progress.ts
apps/extension/entrypoints/content/: capture-runtime.ts
apps/extension/entrypoints/lib/: extractor.ts
docs/: extension-architecture-baseline.md
scripts/: check-no-generated-js.mjs
tests/parsers/: parser-registry.test.ts
(+18 files in other folders)
