[package]
name = "ai-history-desktop"
version = "0.1.0"
description = "AI History desktop app"
authors = ["AI History"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "blocking"] }
zip = "2.2.1"
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.22.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
